--- a/index.html
+++ b/index.html
@@ -117,15 +117,15 @@
         <ul class="footer__column__list">
           <li class="footer__column__list__item">about us</li>
           <li class="footer__column__list__item">company</li>
-          <li class="footer__column__list__item">lorem</li>
-          <li class="footer__column__list__item">hires</li>
+          <li class="footer__column__list__item">ipsum</li>
+          <li class="footer__column__list__item">telefono</li>
           <li class="footer__column__list__item">constact</li>
         </ul>
       </article>
       <article class="footer__column">
         <ul class="footer__column__list">
           <li class="footer__column__list__item">nothing else</li>
-          <li class="footer__column__list__item">no more</li>
+          <li class="footer__column__list__item">with no issues</li>
           <li class="footer__column__list__item">lorem</li>
           <li class="footer__column__list__item">hires</li>
           <li class="footer__column__list__item">contact us</li>
@@ -133,13 +133,14 @@
       </article>
       <article class="footer__column">
         <ul class="footer__column__list">
-          <li class="footer__column__list__item">about us</li>
+          <li class="footer__column__list__item">about</li>
           <li class="footer__column__list__item">company</li>
           <li class="footer__column__list__item">lorem</li>
           <li class="footer__column__list__item">hires</li>
           <li class="footer__column__list__item">constact</li>
         </ul>
       </article>
+      <h3>Im the best!!!</h3>
     </footer>
     <script src="./assets/js/index.js"></script>
   </body>
